[project]
name = "chat-langgraph-fa-st"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
]
